# xupertrade

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml
bot/: Dockerfile  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 0001_initial_schema.py  0002_position_state_json.py  0003_funding_payments.py  0004_backtest_runs.py  0005_hodl_tables.py  0006_vault_scanner_tables.py  0007_user_vault_entries.py  0008_pnl_aware_metrics.py  0009_multi_tenancy_schema.py  0010_rls_policies.py  0011_backfill_tenant_id_not_null.py  0012_tenant_telegram_links.py  0013_tenant_telegram_links_unique_chat.py  0014_tenant_telegram_links_rls.py  0015_tenant_secrets_expires_at.py  0016_tenant_admin_limits.py
bot/hypertrade/: api.py  config.py  main.py
bot/hypertrade/backtest/: __init__.py  __main__.py  metrics.py  runner.py
bot/hypertrade/data/: binance_dump.py  feed.py  indicators.py  roots_local.py
bot/hypertrade/db/: models.py  repo.py
bot/hypertrade/engine/: control.py  indicators_status.py  portfolio.py  runner.py  signals.py  strategy_allowlist.py
bot/hypertrade/events/: bus.py  types.py
bot/hypertrade/exchange/: base.py  hyperliquid.py  paper.py
bot/hypertrade/hodl/: __init__.py  altseason.py  base.py  btc_accumulation_zone.py  btc_ath_breakout.py  hype_accumulation.py  macro_backdrop.py  registry.py  vault_picks.py
bot/scripts/: ath_vs_hold_dca.py  audit_modes.py  import_roots_har.py  migrate.sh  record_levels.py  record_purchase.py
bot/tests/: test_backtest.py  test_config.py  test_kelly.py  test_vvv_hedge.py
(+313 files in other folders)
