[project]
name = "hypertrade"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiohttp-cors>=0.8.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "hyperliquid-python-sdk>=0.23.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.0.0",
    "bcrypt>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.0",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
